--- a/first_try.ipynb
+++ b/first_try.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 58,
    "metadata": {
     "collapsed": true
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -55,7 +55,7 @@
        "(96320, 22)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -78,7 +78,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "enc = OneHotEncoder()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "labels = enc.fit_transform(labels.reshape(-1,1)).toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {
     "collapsed": true
    },
@@ -89,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 64,
    "metadata": {
     "collapsed": true
    },
@@ -109,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 65,
    "metadata": {
     "collapsed": true
    },
@@ -258,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
@@ -270,24 +293,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 67,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "model = Sequential()\n",
-    "model.add(Dense(10, input_shape=(21,), activation='tanh'))\n",
-    "model.add(Dropout(0.4))\n",
+    "model.add(Dense(15, input_shape=(21,), activation='tanh'))\n",
+    "model.add(Dropout(0.7))\n",
+    "model.add(Dense(10, activation='tanh'))\n",
+    "model.add(Dropout(0.7))\n",
     "model.add(Dense(5, activation='tanh'))\n",
-    "model.add(Dropout(0.4))\n",
-    "model.add(Dense(1, activation='tanh'))\n",
+    "model.add(Dropout(0.3))\n",
+    "model.add(Dense(2, activation='tanh'))\n",
     "model.compile(optimizer='sgd', loss='binary_crossentropy')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
@@ -296,54 +321,226 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20\n",
-      "67424/67424 [==============================] - 1s - loss: 0.7267     \n",
-      "Epoch 2/20\n",
-      "67424/67424 [==============================] - 1s - loss: 0.6939     \n",
-      "Epoch 3/20\n",
-      "67424/67424 [==============================] - 1s - loss: 0.6939     \n",
-      "Epoch 4/20\n",
-      "67424/67424 [==============================] - 1s - loss: 0.6937     \n",
-      "Epoch 5/20\n",
-      "67424/67424 [==============================] - 1s - loss: 0.6937     \n",
-      "Epoch 6/20\n",
-      "67424/67424 [==============================] - 1s - loss: 0.6939     \n",
-      "Epoch 7/20\n",
-      "67424/67424 [==============================] - 1s - loss: 0.6940     \n",
-      "Epoch 8/20\n",
-      "67424/67424 [==============================] - 1s - loss: 0.6935     \n",
-      "Epoch 9/20\n",
-      "67424/67424 [==============================] - 1s - loss: 0.6938     \n",
-      "Epoch 10/20\n",
-      "67424/67424 [==============================] - 1s - loss: 0.6940     \n",
-      "Epoch 11/20\n",
-      "67424/67424 [==============================] - 1s - loss: 0.6937     \n",
-      "Epoch 12/20\n",
-      "67424/67424 [==============================] - 1s - loss: 0.6938     \n",
-      "Epoch 13/20\n",
-      "67424/67424 [==============================] - 1s - loss: 0.6936     \n",
-      "Epoch 14/20\n",
-      "67424/67424 [==============================] - 1s - loss: 0.6937     \n",
-      "Epoch 15/20\n",
-      "67424/67424 [==============================] - 1s - loss: 0.6938     \n",
-      "Epoch 16/20\n",
-      "67424/67424 [==============================] - 1s - loss: 0.6936     \n",
-      "Epoch 17/20\n",
-      "67424/67424 [==============================] - 1s - loss: 0.6937     \n",
-      "Epoch 18/20\n",
-      "67424/67424 [==============================] - 1s - loss: 0.6935     \n",
-      "Epoch 19/20\n",
-      " 1248/67424 [..............................] - ETA: 2s - loss: 0.6914"
+      "Epoch 1/100\n",
+      "67424/67424 [==============================] - 0s - loss: 2.7688     \n",
+      "Epoch 2/100\n",
+      "67424/67424 [==============================] - 0s - loss: 1.4972     \n",
+      "Epoch 3/100\n",
+      "67424/67424 [==============================] - 0s - loss: 1.0897     \n",
+      "Epoch 4/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.8063     \n",
+      "Epoch 5/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.7271     \n",
+      "Epoch 6/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.7069     \n",
+      "Epoch 7/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6990     \n",
+      "Epoch 8/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6958     \n",
+      "Epoch 9/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6945     \n",
+      "Epoch 10/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6939     \n",
+      "Epoch 11/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6935     \n",
+      "Epoch 12/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6933     \n",
+      "Epoch 13/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6932     \n",
+      "Epoch 14/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6932     \n",
+      "Epoch 15/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6932     \n",
+      "Epoch 16/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 17/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 18/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6932     \n",
+      "Epoch 19/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 20/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 21/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6932     \n",
+      "Epoch 22/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 23/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 24/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 25/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 26/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 27/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 28/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 29/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 30/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 31/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 32/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 33/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 34/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 35/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 36/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 37/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 38/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6932     \n",
+      "Epoch 39/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6932     \n",
+      "Epoch 40/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 41/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 42/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 43/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6932     \n",
+      "Epoch 44/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 45/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 46/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 47/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 48/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 49/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6932     \n",
+      "Epoch 50/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 51/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 52/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 53/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 54/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 55/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6932     \n",
+      "Epoch 56/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 57/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6932     \n",
+      "Epoch 58/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 59/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 60/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6932     \n",
+      "Epoch 61/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6932     \n",
+      "Epoch 62/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 63/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6932     \n",
+      "Epoch 64/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 65/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 66/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 67/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 68/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6932     \n",
+      "Epoch 69/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 70/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6932     \n",
+      "Epoch 71/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 72/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 73/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 74/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 75/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 76/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 77/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 78/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 79/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6932     \n",
+      "Epoch 80/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 81/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6932     \n",
+      "Epoch 82/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 83/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 84/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 85/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6932     \n",
+      "Epoch 86/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 87/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 88/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6932     \n",
+      "Epoch 89/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 90/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 91/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 92/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 93/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 94/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 95/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 96/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 97/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 98/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 99/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6931     \n",
+      "Epoch 100/100\n",
+      "67424/67424 [==============================] - 0s - loss: 0.6932     \n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7efccdd07350>"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit(X_train, Y_train, nb_epoch=20, batch_size=32)"
+    "model.fit(X_train, Y_train, nb_epoch=100, batch_size=1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 69,
    "metadata": {
     "collapsed": true
    },
@@ -354,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
